finalize load and app py files

--- a/load_data.ipynb
+++ b/load_data.ipynb
@@ -753,26 +753,13 @@
     "    except KeyError:\n",
     "        print(f\"{ticker}-------------- TRAILING PE NOT FOUND\")\n",
     "        trailingPE.append(0)\n",
-    "\n",
-    "#         opens.append(0)\n",
-    "#         lows.append(0)\n",
-    "#         highs.append(0)\n",
-    "#         close.append(0)\n",
-    "#         divYield.append(0)\n",
-    "#         marketCap.append(0)\n",
-    "#         beta.append(0)\n",
-    "#         forwardPE.append(0)\n",
-    "#         avgVolume.append(0)\n",
-    "#         trailingPE.append(0)\n",
     "              \n",
-    "    counter = counter + 1\n",
-    "\n",
-    "    \n"
+    "    counter = counter + 1"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -790,7 +777,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "metadata": {
     "scrolled": false
    },
@@ -810,7 +797,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -819,7 +806,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -1104,7 +1091,7 @@
        "  'averageVolume': 696872.0,\n",
        "  'marketCap': 10456550400.0,\n",
        "  'Trailing PE': 35.07564,\n",
-       "  'dividendYield': 0.011300000000000001},\n",
+       "  'dividendYield': 0.0111},\n",
        " {'Symbol': 'LNT',\n",
        "  'Security': 'Alliant Energy Corp',\n",
        "  'Sector': 'Utilities',\n",
@@ -1129,7 +1116,7 @@
        "  'High': 110.95999908447266,\n",
        "  'beta': 0.807773,\n",
        "  'forwardPE': 8.384966,\n",
-       "  'averageVolume': 1833769.0,\n",
+       "  'averageVolume': 1844713.0,\n",
        "  'marketCap': 33578229760.0,\n",
        "  'Trailing PE': 7.7321105,\n",
        "  'dividendYield': 0.0196},\n",
@@ -1507,7 +1494,7 @@
        "  'High': 53.11000061035156,\n",
        "  'beta': 0.853991,\n",
        "  'forwardPE': 14.471232,\n",
-       "  'averageVolume': 2596362.0,\n",
+       "  'averageVolume': 2605678.0,\n",
        "  'marketCap': 29388466176.0,\n",
        "  'Trailing PE': 18.723856,\n",
        "  'dividendYield': 0.0273},\n",
@@ -1913,7 +1900,7 @@
        "  'High': 151.00999450683594,\n",
        "  'beta': 0.8350839999999999,\n",
        "  'forwardPE': 24.740864,\n",
-       "  'averageVolume': 535145.0,\n",
+       "  'averageVolume': 532370.0,\n",
        "  'marketCap': 17220294656.0,\n",
        "  'Trailing PE': 36.96699,\n",
        "  'dividendYield': 0.0154},\n",
@@ -1983,7 +1970,7 @@
        "  'High': 46.84000015258789,\n",
        "  'beta': 0.505777,\n",
        "  'forwardPE': 15.222223,\n",
-       "  'averageVolume': 2064711.0,\n",
+       "  'averageVolume': 2074383.0,\n",
        "  'marketCap': 14111178752.0,\n",
        "  'Trailing PE': 7.9965672,\n",
        "  'dividendYield': 0.0318},\n",
@@ -2165,7 +2152,7 @@
        "  'High': 21.59000015258789,\n",
        "  'beta': 0.9506300000000001,\n",
        "  'forwardPE': 15.314286,\n",
-       "  'averageVolume': 5144593.0,\n",
+       "  'averageVolume': 5166727.0,\n",
        "  'marketCap': 11680962560.0,\n",
        "  'Trailing PE': 0.0,\n",
        "  'dividendYield': 0.029500000000000002},\n",
@@ -2487,7 +2474,7 @@
        "  'High': 62.400001525878906,\n",
        "  'beta': 1.692752,\n",
        "  'forwardPE': 12.634146,\n",
-       "  'averageVolume': 1836073.0,\n",
+       "  'averageVolume': 1832996.0,\n",
        "  'marketCap': 8650620928.0,\n",
        "  'Trailing PE': 19.009174,\n",
        "  'dividendYield': 0.0438},\n",
@@ -2837,7 +2824,7 @@
        "  'High': 94.3499984741211,\n",
        "  'beta': 1.796218,\n",
        "  'forwardPE': 9.0727625,\n",
-       "  'averageVolume': 2808741.0,\n",
+       "  'averageVolume': 2780972.0,\n",
        "  'marketCap': 28326889472.0,\n",
        "  'Trailing PE': 25.659065,\n",
        "  'dividendYield': 0.019100000000000002},\n",
@@ -3187,7 +3174,7 @@
        "  'High': 54.97999954223633,\n",
        "  'beta': 2.080357,\n",
        "  'forwardPE': 19.876812,\n",
-       "  'averageVolume': 5582572.0,\n",
+       "  'averageVolume': 5600873.0,\n",
        "  'marketCap': 32004116480.0,\n",
        "  'Trailing PE': 0.0,\n",
        "  'dividendYield': 0.0273},\n",
@@ -3733,7 +3720,7 @@
        "  'High': 161.0800018310547,\n",
        "  'beta': 1.569852,\n",
        "  'forwardPE': 39.607407,\n",
-       "  'averageVolume': 402370.0,\n",
+       "  'averageVolume': 399159.0,\n",
        "  'marketCap': 14322510848.0,\n",
        "  'Trailing PE': 67.62648,\n",
        "  'dividendYield': nan},\n",
@@ -4950,7 +4937,7 @@
        "  'Close': 11.170000076293945,\n",
        "  'High': 11.220000267028809,\n",
        "  'beta': 1.080882,\n",
-       "  'forwardPE': 7.8661976,\n",
+       "  'forwardPE': nan,\n",
        "  'averageVolume': 11742985.0,\n",
        "  'marketCap': 12254942208.0,\n",
        "  'Trailing PE': 0.0,\n",
@@ -6113,7 +6100,7 @@
        "  'High': 94.2699966430664,\n",
        "  'beta': 0.45588199999999995,\n",
        "  'forwardPE': 16.138111,\n",
-       "  'averageVolume': 2544113.0,\n",
+       "  'averageVolume': 2528282.0,\n",
        "  'marketCap': 54029037568.0,\n",
        "  'Trailing PE': 10.6951685,\n",
        "  'dividendYield': 0.0531},\n",
@@ -6533,7 +6520,7 @@
        "  'High': 60.75,\n",
        "  'beta': nan,\n",
        "  'forwardPE': 10.869565,\n",
-       "  'averageVolume': 3318566.0,\n",
+       "  'averageVolume': 3276040.0,\n",
        "  'marketCap': 14400000000.0,\n",
        "  'Trailing PE': 15.673981,\n",
        "  'dividendYield': 0.042600002000000005},\n",
@@ -6755,7 +6742,7 @@
        "  'Low': 473.8500061035156,\n",
        "  'Close': 480.1499938964844,\n",
        "  'High': 497.8500061035156,\n",
-       "  'beta': nan,\n",
+       "  'beta': 2.146533,\n",
        "  'forwardPE': 24.9688,\n",
        "  'averageVolume': 408646.0,\n",
        "  'marketCap': 24914262016.0,\n",
@@ -6995,7 +6982,7 @@
        "  'High': 517.1099853515625,\n",
        "  'beta': 0.857142,\n",
        "  'forwardPE': 24.95635,\n",
-       "  'averageVolume': 1769616.0,\n",
+       "  'averageVolume': 1779537.0,\n",
        "  'marketCap': 203953979392.0,\n",
        "  'Trailing PE': 42.20108,\n",
        "  'dividendYield': 0.0017000000000000001},\n",
@@ -7883,7 +7870,7 @@
        "  'dividendYield': 0.0061000003}]"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -7894,7 +7881,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -7903,7 +7890,7 @@
        "504"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -7914,7 +7901,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -7923,7 +7910,7 @@
        "504"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -7934,7 +7921,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -7943,7 +7930,7 @@
        "504"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
